crucible-cli/test-data/simulate/from-maybe.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====

Prove:
  test-data/simulate/from-maybe.cbl:11:12: error: in main
  OK to project z
  cp@0:b
COUNTEREXAMPLE

Prove:
  test-data/simulate/from-maybe.cbl:12:5: error: in main
  from-just eq (bogus)
  false
COUNTEREXAMPLE
